[package]
name = "kvs"
version = "0.1.0"
authors = ["Ramezes Dong <donghouze666@gmail.com>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6" }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
